--- a/styles/styles.css
+++ b/styles/styles.css
@@ -176,6 +176,18 @@ header > img {
 
 .banner-text h2 {
     font-size: 18px;
+    animation: h2-name 4s ease 0s 1 normal forwards;
+}
+@keyframes h2-name {
+	0% {
+		transform: scale(2);
+		transform-origin: 50% 100%;
+	}
+
+	100% {
+		transform: scale(1);
+		transform-origin: 50% 100%;
+	}
 }
 
 .banner-text h1 {
